--- a/series-journal/src/App.css
+++ b/series-journal/src/App.css
@@ -1,17 +1,11 @@
-.App {
-  display: flex;
-  font-family: sans-serif;
-}
-
-.App-header {
-  width: 200px;
-  padding: 20px;
-  background-color: #f0f0f0;
-  height: 100vh;
-}
-
-.App-content {
-  flex-grow: 1;
-  padding: 20px;
-  text-align: center;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://images.unsplash.com/photo-1574375927938-d5a98e8ffe85?q=80&w=2070');
+  background-size: cover;
+  background-attachment: fixed;
 }
